fixtures/cs-dec-01/bad/create-decipher-alias.ts
import { createDecipher as dec } from "crypto";

export function decrypt(data: Buffer, password: string) {
	return dec("aes-256-cbc", password);
}
